Update react implementation.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     var picker = Elm.Picker.init({
       flags: [
-        impl('React', '15.3.1', false, 'react-15.3.1/index.html'),
+        impl('React', '18.3.1', false, 'react-15.3.1/dist/index.html'),
         impl('Elm', '0.19.1', false, 'elm-0.19.1/index.html'),
         impl('Gren', '0.4.5', false, 'gren-0.4.5/index.html'),
         impl('React', '15.3.1', true, 'react-15.3.1-optimized/index.html'),
